syntax = "proto3";

package number;

message NumbersRequest{
  int32 firstValue = 1;
  int32 lastValue = 2;
}

message NumbersResponse{
  int32 number = 1;
}

service NumbersGenerator{
  rpc GenerateNumbers(NumbersRequest) returns (stream NumbersResponse) {};
}